--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,22 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.javaee</groupId>
+            <artifactId>jboss-ejb-api</artifactId>
+            <version>3.0.0.GA</version>
+        </dependency>
+    </dependencies>
+
+    <repositories>
+        <repository>
+            <id>redhat-ga</id>
+            <url>https://repo1.maven.org/maven2/org/jboss/javaee/jboss-ejb-api/3.0.0.GA/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 </project>
